--- a/ebay/index.html
+++ b/ebay/index.html
@@ -17,7 +17,7 @@
   <script data-source="gwd_webcomponents_min.js" data-version="5" data-exports-type="gwd_webcomponents" src="gwd_webcomponents_min.js"></script>
   <script data-source="gwdpage_min.js" data-version="12" data-exports-type="gwd-page" src="gwdpage_min.js"></script>
   <script data-source="gwdpagedeck_min.js" data-version="11" data-exports-type="gwd-pagedeck" src="gwdpagedeck_min.js"></script>
-  <script data-source="Enabler.js" data-exports-type="gwd-doubleclick" src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
+  <script data-source="Enabler.js" data-exports-type="gwd-doubleclick" src="Enabler.js"></script>
   <script data-source="gwddoubleclick_min.js" data-version="17" data-exports-type="gwd-doubleclick" src="gwddoubleclick_min.js"></script>
   <script data-source="gwdimage_min.js" data-version="11" data-exports-type="gwd-image" src="gwdimage_min.js"></script>
   
