--- a/ebay/index.html
+++ b/ebay/index.html
@@ -25,7 +25,7 @@
 
 <body>
   
-  <gwd-doubleclick id="gwd-ad">
+  <gwd-doubleclick id="gwd-ad2">
     <gwd-metric-configuration></gwd-metric-configuration>
     <div is="gwd-pagedeck" class="gwd-page-container" id="pagedeck">
       <div is="gwd-page" id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox gwd-div-gok9" data-gwd-width="100%" data-gwd-height="100%">
