--- a/ebay/index.html
+++ b/ebay/index.html
@@ -109,5 +109,5 @@
 
 <script data-exports-type="dclk-quick-preview">studio.Enabler.setRushSimulatedLocalEvents(true);</script><script data-exports-type="gwd-studio-registration">function StudioExports() {
 }</script><script type="text/gwd-admetadata">{"version":1,"type":"DoubleClick","format":"","template":"Banner 3.0.0","politeload":false,"fullscreen":false,"counters":[],"timers":[],"exits":[],"creativeProperties":{"minWidth":0,"minHeight":0,"maxWidth":0,"maxHeight":0},"components":["gwd-doubleclick","gwd-image","gwd-page","gwd-pagedeck"],"responsive":true}</script>
-<style>body > #gwd-ad {display: inline !important;}</style>
+<style>#gwd-ad {display: block !important;} body > #gwd-ad {display: inline !important;}</style>
 </body></html>
