--- a/paypal/index.html
+++ b/paypal/index.html
@@ -44,7 +44,7 @@
       <img src="assets/PayPal_bp_03.png" class="gwd-img-11q2 gwd-gen-r56rgwdanimation">
     </div>
     <div class="gwd-div-3yg5" id="txt_pay" data-gwd-tl-locked="">
-      <div class="gwd-div-orn1 gwd-gen-h9gzgwdanimation" id="w_pay">With Paypal<br>
+      <div class="gwd-div-orn1 gwd-gen-h9gzgwdanimation" id="w_pay">With PayPal<br>
         Buyer Protection</div>
       <div class="gwd-div-14to gwd-gen-phn1gwdanimation" id="how_pay">HOW YOU HAVE MORE ASSURANCE<br>
         TO SHOP WITH EVEN GREATER<br>
