--- a/paypal/index.html
+++ b/paypal/index.html
@@ -46,7 +46,7 @@
     <div class="gwd-div-3yg5" id="txt_pay" data-gwd-tl-locked="">
       <div class="gwd-div-orn1 gwd-gen-h9gzgwdanimation" id="w_pay">With PayPal<br>
         Buyer Protection</div>
-      <div class="gwd-div-14to gwd-gen-phn1gwdanimation" id="how_pay">HOW YOU HAVE MORE ASSURANCE<br>
+      <div class="gwd-div-14to gwd-gen-phn1gwdanimation" id="how_pay">NOW YOU HAVE MORE ASSURANCE<br>
         TO SHOP WITH EVEN GREATER<br>
         PEACE OF MIND</div>
     </div>
