--- a/xzoom-auto-spares/index.html
+++ b/xzoom-auto-spares/index.html
@@ -32,8 +32,10 @@
         </div>
         </section>   
         <!-- fancy end -->
-
       </div>
+    </div>
+    <div class="wrap_iframe">
+        <iframe width="100%" height="460" style="clear:both;" src="https://feedback.ebay.com/ws/eBayISAPI.dll?ViewFeedback2&userid=auto-spares4you" frameborder="0" allowfullscreen></iframe>   
     </div>
     <script src="js/setup.js"></script>
 </body>
